# isochron

./: CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: RESULTS.md  bench_isochron.py
src/isochron/: __init__.py  _compat.py  _duration.py  _errors.py  _format.py  _parse_date.py  _parse_datetime.py  _parse_duration.py  _parse_interval.py  _parse_time.py  _parse_tz.py  _strftime.py  _types.py  _tz.py
src/isochron/compat/: __init__.py
tests/: test_compat.py  test_crossverify.py  test_phase1.py  test_phase2.py  test_regressions.py
